# influxdb2

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
doc-src/: conf.py  index.rst  influxdb2.obj.common.rst  influxdb2.obj.org.rst  influxdb2.rst
doc-src/examples/: simple.rst
doc-src/influxdb2/: influxdb2.core.rst
docs/: .buildinfo  genindex.html  index.html  influxdb2.core.html  influxdb2.exceptions.html  influxdb2.html  influxdb2.obj.common.html  influxdb2.obj.html  influxdb2.obj.org.html  influxdb2.orgs.html  influxdb2.types.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  influxdb2.html
docs/_modules/influxdb2/: core.html  exceptions.html  orgs.html  types.html
docs/_sources/: index.rst.txt  influxdb2.obj.rst.txt  influxdb2.orgs.rst.txt  influxdb2.rst.txt  modules.rst.txt
docs/_sources/influxdb2/: influxdb2.types.rst.txt
docs/_static/: alabaster.css
docs/examples/: index.html  simple.html
docs/influxdb2/: influxdb2.core.html  influxdb2.exceptions.html  influxdb2.html  influxdb2.orgs.html  influxdb2.types.html  modules.html
docs/source/: conf.py  index.rst
docs/source/examples/: index.rst
docs/source/influxdb2/: influxdb2.exceptions.rst  influxdb2.rst  modules.rst
influxdb2/: __init__.py  core.py  exceptions.py  orgs.py  types.py
lib/influxdb2/: __init__.py  core.py  exceptions.py  orgs.py  types.py
tests/: obj_org_test.py
